# Project-10

./: Jenkinsfile  README.MD  asset-manifest.json  docker-compose.yml  index.html
backend/: .gitignore  Cargo.toml  Dockerfile  Secrets.toml
backend/src/: config.rs  main.rs
backend/src/api/: game.rs  mod.rs  player.rs
backend/src/models/: game_state.rs
backend/src/services/: storage.rs
backend/src/tests/: game_tests.rs
backend/src/utils/: helpers.rs
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/atoms/: Button.js  Tile.js
frontend/src/components/molecules/: BoardRow.js  Footer.js  GridSizeSelector.js  Header.js
frontend/src/components/organisms/: Controls.js  GameBoard.js
frontend/src/hooks/: useGameState.js
frontend/src/pages/: CreatePlayerPage.js  GamePage.js  LoginPage.js
frontend/src/tests/: App.test.js
frontend/src/utils/: api.js  gameLogic.js
static/css/: main.71a5310c.css  main.71a5310c.css.map
static/js/: main.18fa04d2.js  main.18fa04d2.js.map  main.1fe88c07.js  main.1fe88c07.js.map  main.231299a6.js  main.231299a6.js.map  main.8f055246.js  main.8f055246.js.map  main.b94a78fc.js  main.b94a78fc.js.map  main.fe359cf0.js  main.fe359cf0.js.map  main.ff28320c.js  main.ff28320c.js.map
