[package]
name="backend"
version="0.1.0"
edition="2021"

[dependencies]
actix-web="4"
serde={version="1.0",features=["derive"]}
serde_json="1.0"
dotenv="0.15"
rand="0.8"
lazy_static="1.4"
actix-cors="0.7"
uuid={version="1.2",features=["v4"] }
tokio={version="1",features=["macros","rt-multi-thread"]}
aws-sdk-dynamodb="1.10"
aws-config="1.1"
aws-types="1.1"
futures="0.3"
shuttle-runtime = "0.50.0"
shuttle-actix-web = "0.50.0"
env_logger = "0.11.3"
aws-credential-types = "1.2.8"
